--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ body {
 }
 
 .section {
-    /* perspective: 10px; */
     background-image: url("./пальмы.png");
     width: 100%;
     height: 1500px;
@@ -23,8 +22,6 @@ body {
     width: 100%;
     height: 1500px;
     position: absolute;
-    /* top: 8px;
-  left: 8px; */
 }
 
 .fon {
@@ -36,6 +33,8 @@ body {
     );
     width: 100%;
     height: 1500px;
+    -webkit-transition: all 2s ease-in-out;
+    -o-transition: all 2s ease-in-out;
     transition: all 2s ease-in-out;
     scroll-behavior: smooth;
     background-attachment: fixed;
@@ -69,38 +68,15 @@ body {
     position: fixed;
     font-size: 230px;
     color: rgb(97, 97, 230);
-    /* z-index: 1; */
     font-family: "Roboto", sans-serif;
     font-weight: 400;
-    /* transition-property: transform;
-    transition-timing-function: ease-in-out; */
-    /* animation-name: Up;
-    animation-duration: 1s;
-    animation-delay: 0.5s;
-    animation-direction: normal; */
 }
-
-/* @keyframes Up {
-    from {
-        transform: translateY(0);
-    }
-
-    to {
-        transform: translateY(-300px);
-    }
-
-    80% {
-        transform: translateY(-300px);
-    }
-} */
 
 .after {
     top: 350px;
     left: 200px;
     position: fixed;
-
     color: rgb(97, 97, 230);
-    /* z-index: 1; */
     font-family: "Roboto", sans-serif;
     font-style: italic;
     font-weight: 100;
@@ -112,7 +88,6 @@ body {
     position: fixed;
     font-size: 230px;
     color: rgb(97, 97, 230);
-    /* z-index: 1; */
     font-family: "Roboto", sans-serif;
     font-weight: 400;
 }
@@ -123,7 +98,6 @@ body {
     border-top: solid;
     text-align: justify;
     word-break: break-all;
-    /* margin-right: 10%; */
     position: fixed;
     width: 600px;
     left: 800px;
@@ -137,16 +111,17 @@ body {
     width: 100%;
     height: 400px;
     top: 1000px;
-    /* left: 0; */
     position: absolute;
     font-size: 36px;
     color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: end;
-    /* z-index: 1; */
 }
 .text-inner {
-    /* text-align: justify; */
     word-break: break-all;
     height: auto;
     padding-right: 10%;
@@ -161,26 +136,54 @@ body {
     left: 30px;
     height: 70px;
     margin-bottom: 10px;
+    -webkit-animation-duration: 5s;
     animation-duration: 5s;
+    -webkit-animation-name: slideUp;
     animation-name: slideUp;
+    -webkit-animation-delay: 1s;
     animation-delay: 1s;
+    -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
+    -webkit-animation-direction: normal;
     animation-direction: normal;
 }
-
-@keyframes slideUp {
+@-webkit-keyframes slideUp {
     from {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 
     to {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 
     20% {
+        -webkit-transform: translateY(-70px);
         transform: translateY(-70px);
     }
     35% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+}
+@keyframes slideUp {
+    from {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    to {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    20% {
+        -webkit-transform: translateY(-70px);
+        transform: translateY(-70px);
+    }
+    35% {
+        -webkit-transform: translateY(0);
         transform: translateY(0);
     }
 }
